corrigiendo asignado en portada

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -117,7 +117,7 @@
             <div class="gray-box">
                 <div class="hidden-xs pma-summary-box">
                     <span class="font_small">Asignado:</span><span class="font_small">{{ data_ogm.asignado|million }} millones</span><br />
-                    <span class="font_small">Ejecutado:</span><span class="font_small">{{ data_ogm.ajecutado|million }} millones</span>
+                    <span class="font_small">Ejecutado:</span><span class="font_small">{{ data_ogm.ejecutado|million }} millones</span>
                 </div>
                 <h2><strong>Destino</strong><br/>de los Gastos</h2>
                 <hr class="pma-line-2">
