--- a/core/static/css/horizontal-timeline.css
+++ b/core/static/css/horizontal-timeline.css
@@ -131,7 +131,7 @@ Main Components
   height: 12px;
   width: 12px;
   border-radius: 50%;
-  background-color: #fff;
+  background-color: #333;
   -webkit-transition: background-color 0.3s, border-color 0.3s;
   -moz-transition: background-color 0.3s, border-color 0.3s;
   transition: background-color 0.3s, border-color 0.3s;
@@ -427,9 +427,10 @@ Main Components
 .no-touch .inverted .cd-timeline-navigation a.inactive:hover {
   border-color: #fff;
 }
-.cd-horizontal-timeline .events-content p, .line-cifra {
+.cd-horizontal-timeline .events-content p, .rankin .line-cifra {
   color: #fff;
 }
-.rankin .events, .rankin .filling-line, .rankin a.selected::after { background: #fff !important;}
-.posicion { font-size: 25px; color: #71ffe6;}
-.line-cifra { font-size: 14px;}
+.rankin .events, .rankin .filling-line, .rankin a.selected::after, .rankin .events a::after { background: #fff !important;}
+.rankin .posicion { color: #71ffe6; }
+.posicion { font-size: 23px;}
+.line-cifra { font-size: 16px;}
