--- a/core/static/css/responsive.css
+++ b/core/static/css/responsive.css
@@ -2,7 +2,7 @@
     h2 { font-size:1.428em;} 
     h4 { font-size: 1.2em; margin: 0.414em 0 0.5em;}
     .mapa-container, .mora { margin-top: 30px;}
-    .acerca { margin-top: 0px;}
+    .acerca, .chart-update { margin-top: 0px;}
     .icons-inversion:nth-child(2n+1) {
       clear:left;      
     }
@@ -12,4 +12,5 @@
    }
    .container > .navbar-collapse { margin-left: 15px;}
    .navbar-form { padding-left: 8px !important;}
+   .bubbletree-container { margin-top: 65px;}
 }
