--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Presupuestos Municipales Abiertos</title>
+    <link rel="canonical" href="{% url 'home' %}"/>
+    <base href="{% url 'home' %}"/>
 
     <!-- CSS de Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
